# ruosd_first

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
frontend-vue/: ADMIN_README.md  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
frontend-vue/src/: App.vue  router.js  style.css
knowledge_docs/: 01_产品FAQ.txt  01_电商助手使用指南.txt  02_订单处理流程规范.txt  02_退换货政策.txt  03_售后服务政策手册.txt  03_商品信息库.txt  04_产品常见问题解答.txt  04_配送物流说明.txt  06_配送说明.docx  企业级改进策略全录.md  第一阶段改进计划.md  第三阶段改进计划.md  第二阶段改进计划.md  记忆系统实施计划.md
scripts/: health_monitor.py  seed_data.py  test_all.py
src/agents/: __init__.py  base_agent.py  customer_service_agent.py  order_agent.py  product_agent.py
src/graph/: __init__.py  agent_graph.py  graph_coordinator.py  intent_router.py  state.py  tools.py
src/models/: __init__.py  conversation.py  order.py  product.py  user.py
src/routers/: __init__.py  admin_router.py  chat_router.py  system_router.py  user_router.py
src/services/: __init__.py  agent_manager.py  chroma_store_service.py  conversation_service.py  document_processor.py  history_compressor.py  knowledge_base.py  llm_service.py  memory_service.py  ollama_embedding_service.py  order_service.py  product_service.py  question_rewriter.py  user_service.py
src/tasks/: celery_app.py  document_tasks.py
src/utils/: __init__.py  (+7 more)
tests/: conftest.py  test_agent_routing.py  test_agents.py  test_api.py  test_latency.py
(+14 files in other folders)
